--- a/mobile_app/package.json
+++ b/mobile_app/package.json
@@ -13,6 +13,7 @@
     "@react-navigation/native": "^6.1.10",
     "@react-navigation/native-stack": "^6.9.18",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "axios": "^1.6.7",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-config-standard": "^17.1.0",
